util/ConsoleParse: Cleanup Java9+ deprecation of newInstance.